src/objects/EBC_Preference__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated billing account</description>
        <inlineHelpText>Associated billing account</inlineHelpText>
        <label>Billing Account</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>EBC Preferences</relationshipLabel>
        <relationshipName>eBroadcast_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_From_Name__c</fullName>
        <description>The From Name that will be set by default on a new campaign</description>
        <inlineHelpText>The From Name that will be set by default on a new campaign</inlineHelpText>
        <label>Default From Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Google_Analytics_Tracker__c</fullName>
        <description>Default Google Analytics account for the current account</description>
        <inlineHelpText>Default Google Analytics account for the current account</inlineHelpText>
        <label>Default Google Analytics Tracker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Account_Status__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Send an email with the monthly account status to the primary contact email</description>
        <inlineHelpText>Send an email with the monthly account status to the primary contact email</inlineHelpText>
        <label>Monthly Account Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_On_Send__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Send an email notification to primary contact email when campaign is sent</description>
        <inlineHelpText>Send an email notification to primary contact email when campaign is sent</inlineHelpText>
        <label>Notify On Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrimaryContact_Address__c</fullName>
        <description>The address of the primary contact</description>
        <inlineHelpText>The address of the primary contact</inlineHelpText>
        <label>Primary Contact Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PrimaryContact_Company__c</fullName>
        <description>The company name for which the primary contact is working for</description>
        <inlineHelpText>The company name for which the primary contact is working for</inlineHelpText>
        <label>Primary Contact Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryContact_Email__c</fullName>
        <description>The email address fo the primary contact</description>
        <inlineHelpText>The email address fo the primary contact</inlineHelpText>
        <label>Primary Contact Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PrimaryContact_Job_Title__c</fullName>
        <description>The job title of the primary contact</description>
        <inlineHelpText>The job title of the primary contact</inlineHelpText>
        <label>Primary Contact Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryContact_Name__c</fullName>
        <description>The name of the primary contact</description>
        <inlineHelpText>The name of the primary contact</inlineHelpText>
        <label>Primary Contact Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryContact_Phone__c</fullName>
        <description>The phone number of the primary contact</description>
        <inlineHelpText>The phone number of the primary contact</inlineHelpText>
        <label>Primary Contact Phone</label>
        <type>Phone</type>
    </fields>
    <label>EBC Preference</label>
    <nameField>
        <label>eBroadcast Preference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EBC Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>